# pull-journal-central-client

./: Cargo.toml  README.md  go.mod  go.sum  pull-journal-central-client.go  pull-journal-central-client_test.go  temp
.github/workflows/: release.yml  test-and-build.yml  test-only.yml
DEBIAN/: control
src/: main.rs
