[package]
name = "pjccctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.16"
reqwest = { version = "0.11.5", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"